virtuemart readme add link to wiki added

--- a/plugins/vmpayment/checkoutapipayment/language/en-GB/en-GB.plg_vmpayment_checkoutapipayment.ini
+++ b/plugins/vmpayment/checkoutapipayment/language/en-GB/en-GB.plg_vmpayment_checkoutapipayment.ini
@@ -41,7 +41,7 @@ VMPAYMENT_CHECKOUTAPIPAYMENT_MODE_TYPE_DESC="Verify gateway server SSL certifica
 VMPAYMENT_CHECKOUTAPIPAYMENT_USE_LOCALPAYMENT="Enable localPayment"
 VMPAYMENT_CHECKOUTAPIPAYMENT_USE_LOCALPAYMENT_DESC="Enable localpayment using the js"
 
-VMPAYMENT_CHECKOUTAPIPAYMENT_COMPLETE_FORM="For checkout.com, please enter your Credit Card information:"
+VMPAYMENT_CHECKOUTAPIPAYMENT_COMPLETE_FORM="Click Confirm Purchase to enter your Credit card details:"
 VMPAYMENT_CHECKOUTAPIPAYMENT_CARD_CVV_INVALID="Card CVV Number Invalid or Missing"
 VMPAYMENT_CHECKOUTAPIPAYMENT_CARD_EXPIRATION_DATE_INVALID="Expiration Date Invalid"
 VMPAYMENT_CHECKOUTAPIPAYMENT_CARD_NUMBER_INVALID="Card Number Invalid"
@@ -49,7 +49,6 @@ VMPAYMENT_CHECKOUTAPIPAYMENT_CARD_TYPE_INVALID="Credit Card Type Invalid"
 VMPAYMENT_CHECKOUTAPIPAYMENT_CCNUM="Credit Card Number: "
 VMPAYMENT_CHECKOUTAPIPAYMENT_CCTYPE="Credit Card Type: "
 VMPAYMENT_CHECKOUTAPIPAYMENT_CHECK_CARD_CODE="Check card code"
-VMPAYMENT_CHECKOUTAPIPAYMENT_COMPLETE_FORM="For checkout.com, please enter your Credit Card information:"
 VMPAYMENT_CHECKOUTAPIPAYMENT_CONNECTING_ERROR="Error connecting to AuthorizeNet"
 VMPAYMENT_CHECKOUTAPIPAYMENT_COST_PERCENT_TOTAL="Discount or Fee per Total Amount "
 VMPAYMENT_CHECKOUTAPIPAYMENT_COST_PERCENT_TOTAL_DESC="Discount or Fee to apply for this payment per transaction. Percent amount (e.g. 5%)"
